--- a/src/css/page.module.css
+++ b/src/css/page.module.css
@@ -19,6 +19,11 @@
 	font-size: 24px;
 }
 
+.main h2 a {	
+	text-decoration: none;
+	color: inherit;
+}
+
 .main h3 {
 	margin-top: 10px;
 	margin-bottom: 10px;
