Moved header and subnav

--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -3,16 +3,25 @@
 	z-index: 1;
 }
 
-.inner_header {
+.banner {
 	height: 90px;
+	background: #002147;
+	position: fixed;
+	width: 100vw;
+	margin: auto;
+	border-bottom: 1px solid gray;
+	display: grid;
+	grid-template-columns: 1fr 140px 1fr;
+	z-index: 1;
 }
 
-.links {
-	display: none;
+.listing {
+	display: flex;
+	flex-direction: column;
 }
 
 .oucc_logo {
-	float: left;
+	grid-column: 2;
 	width: 140px;
 	height: 140px;
 	display: block;
@@ -26,63 +35,64 @@
 }
 
 .nav {
-	list-style-type: none;
+	display: flex;
+	flex-direction: row;
 	height: 65px;
 	font-size: 0;
-	width: 1080px;
 	background: #ff2200;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
-	user-select: none; 
+	user-select: none;
+	width: 100%;
 }
 
-.nav li {
-	display: inline-block;
-	padding: 25px 0px;
-	height: 100%;
+.listing > div {
+	display: flex;
+	align-items: center;
+	height: 65px;
 	font-size: 24px;
-	line-height: 100%;
+	padding: 0 40px;
 	cursor: pointer;
 }
 
-.nav li a {
-	padding: 50% 25px 15px;
-	border: none;
-	outline: none;
-	text-decoration: none;
-	color: white;
-	-webkit-tap-highlight-color: white;
-}
-
-.nav li:hover {
-	background: #002147;
-}
-
-.banner {
-	height: 90px;
-	background: #002147;
-	position: relative;
-	width: 1080px;
+.listing > div > a {
+	display: flex;
+	align-items: center;
+	height: 65px;
 	margin: auto;
-	border-bottom: 1px solid gray;
+	vertical-align: top;
 }
 
-.subnav_container {
-	position: relative;
-	width: 1080px;
-	margin: auto;
+.left {
+	grid-column: 1;
+	margin: 0 0 0 auto;
+	justify-content: flex-end;
+}
+
+.right {
+	grid-column: 3;
+	margin: 0 0 0 auto;
+	justify-content: flex-start;
+}
+
+.nav a {color: white}
+.nav a:link {text-decoration: none}
+.nav a:visited {text-decoration: none}
+.nav a:active {text-decoration: none}
+.nav a:hover {text-decoration: none}
+.nav div:hover {
+	background: #002147;
 }
 
 .subnav {
+	display: flex;
+	flex-direction: column;
+	grid-row: 2;
 	list-style-type: none;
-	height: 49px;
-	font-size: 0;
-	position: absolute;
-	left: 140px;
-	width: 940px;
 	border-bottom: 1px solid gray;
-	background: #f8f8f8;
+	background: gray;
+	width: inherit;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
@@ -90,30 +100,31 @@
 }
 
 .subnav li {
+	height: 65px;
 	padding: 9px 20px 0;
-	display: inline-block;
-	border-right: 1px solid gray;
 	cursor: pointer;
 }
 
-.subnav li a {	
-	color: black;
+.subnav li a {
+	display: flex;
+	align-items: center;
+	color: white;
 	font-size: 20px;
-	line-height: 40px;
+	height: inherit;
 }
 
 .subnav li:hover {
-	background: white;
+	background: #002147;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	border-right: 5px solid #ff2200;
 }
 
 .subnav li.selected {
-	background: white;
-	padding-bottom: 1px;
-}
-
-.subnav #empty {
-	width: 860px;
-	background: white;
-	border-right: 0;
-	cursor: auto;
+	background: #002147;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	border-right: 5px solid #ff2200;
 }
