--- a/src/css/page.module.css
+++ b/src/css/page.module.css
@@ -42,8 +42,7 @@
 
 .main img {
 	display: block;
-	max-width: 100%;
-	max-height: 40vh;
+	max-width: calc(100vw * 0.6180340 / 2);
 	margin: 20px auto;
 }
 
