--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -126,7 +126,7 @@
 
 .subnav li:hover {
 	background: #002147;
-	border-right: 5px solid red;
+	border-right: 5px solid green;
 }
 
 .subnav li.selected {
@@ -134,7 +134,7 @@
     box-sizing: border-box;
     -moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
-	border-right: 5px solid #002147;
+	border-right: 5px solid red;
 }
 
 .newsFeed {
