--- a/src/css/calendar.module.css
+++ b/src/css/calendar.module.css
@@ -22,11 +22,18 @@ div.key > div {
 	flex-direction: row;
 }
 
+.eventName {
+	margin-block-start: 0;
+    margin-block-end: 0;
+}
+
 a.eventTitle {text-decoration: none}
 a.eventTitle:link {text-decoration: none}
 a.eventTitle:visited {text-decoration: none}
 a.eventTitle:hover {text-decoration: none}
-a.noEvent {color: black}
+a.noEvent {
+	color: black
+}
 .table {
 	white-space: pre-wrap;
 	table-layout: fixed;
