--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -170,6 +170,7 @@
 	display: flex;
 	align-items: center;
 	box-shadow: 0 10px 5px rgba(0, 0, 0, 0.4);
+	position: relative;
 }
 
 .newsFeed div.intro {
