--- a/src/css/page.module.css
+++ b/src/css/page.module.css
@@ -1,19 +1,20 @@
-.main {
-	margin-left: 30px;
-	margin-right: 30px;
-	height: calc(100vh - 140px);
-	overflow: scroll;
-}
-
-/* Page area styling */
-
 .page {
 	position: fixed;
 	margin: auto;
 	width: 100vw;
 	background: white;
-	padding-top: 10px;
-	
+	display: flex;
+	justify-content: center;
+}
+
+/* Page area styling */
+
+.main {
+	margin-left: 30px;
+	margin-right: 30px;
+	min-width: 844px;
+	height: calc(100vh - 140px);
+	overflow: scroll;
 }
 
 .main h1 {
