Moved all to ts and optimised css, rem extra Props

--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -171,6 +171,7 @@
 	align-items: center;
 	box-shadow: 0 10px 5px rgba(0, 0, 0, 0.4);
 	position: relative;
+	overflow: none;
 }
 
 .newsFeed div.intro {
