--- a/src/css/page.module.css
+++ b/src/css/page.module.css
@@ -1,20 +1,43 @@
 .page {
 	position: fixed;
 	margin: auto;
+	padding: 0 30px;
 	width: 100vw;
 	background: white;
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	box-sizing: border-box;
 }
 
 /* Page area styling */
 
 .main {
-	margin-left: 30px;
-	margin-right: 30px;
-	min-width: 844px;
+	width: 100%;
 	height: calc(100vh - 140px);
 	overflow: scroll;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.wide {
+	width: 100%;
+}
+
+.section {
+	display: flex;
+	flex-direction: column;
+	width: 61.8%;
+}
+
+@media (max-width: 480px) {
+	.page {
+		padding: 0 5px;
+	}
+	.section {
+		width: 100%;
+	}
 }
 
 .main h1 {
