--- a/src/css/components.module.css
+++ b/src/css/components.module.css
@@ -1,11 +1,16 @@
 .profile {
 	display: grid;
 	grid-template-columns: 0.5fr 1fr 2fr;
-	margin: 40px 0;
+	margin: 20px 0;
 }
 
 .profile .thumbnail {
 	margin: 10px 0;
+}
+
+.leftPane {
+	padding: 0 10px;
+	box-sizing: border-box;
 }
 
 .text {
