--- a/src/App.scss
+++ b/src/App.scss
@@ -29,7 +29,7 @@ body {
 	background: white;
 }
 
-#facebook_pane > a > img {
+#facebook_pane>a>img {
 	height: 100%;
 	width: 100%;
 }
@@ -83,6 +83,7 @@ body {
 	content: "";
 	display: table;
 }
+
 #page:after {
 	clear: both;
 }
@@ -209,10 +210,50 @@ textarea {
 	-moz-box-sizing: border-box;
 	resize: none;
 }
+
 #foot {
 	background: #f0f0f0;
 	width: 100%;
 	height: 120px;
 	bottom: 0;
 	z-index: 100;
+}
+
+/* Tooltip */
+
+.toolContainer {
+	position: relative;
+	display: inline-block;
+  }
+
+.toolContainer .tooltip {
+	visibility: hidden;
+	max-width: 200px;
+	min-width: 40px;
+	background-color: black;
+	color: #fff;
+	text-align: center;
+	border-radius: 6px;
+	padding: 5px 10px;
+	position: absolute;
+	z-index: 1;
+	bottom: 125%;
+	left: 50%;
+	margin-left: -50%;
+	opacity: 0.8;
+}
+
+.toolContainer .tooltip::after {
+	content: '';
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	margin-left: -5px;
+	border-width: 5px;
+	border-style: solid;
+	border-color: black transparent transparent transparent;
+}
+
+.toolContainer:hover .tooltip {
+	visibility: visible;
 }
