--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -227,8 +227,8 @@
 }
 
 .mobileMenu {
-	position: fixed;
 	z-index: 1;
+	position: fixed;
 	bottom: 30px;
 	right: 30px;
 	display: flex;
@@ -237,11 +237,38 @@
 }
 
 .mobileLinks {
+	z-index: 1;
 	display: flex;
 	flex-direction: column;
+	animation: contract-down 0.5s forwards;
+}
+
+.mobileLinksShown {
+	visibility: visible;
+	animation: expand-up 0.5s forwards;
+}
+
+@keyframes expand-up {
+	from {
+		transform: translate(0, 100%) scale(0.9, 0);
+	}
+	to {
+		transform: translate(0, 0%) scale(1, 1);
+	}
+}
+
+@keyframes contract-down {
+	from {
+		transform: translate(0, 0%) scale(1, 1);
+	}
+	to {
+		transform: translate(0, 100%) scale(0.9, 0);
+		visibility: hidden;
+	}
 }
 
 .mobileThumbContainer {
+	z-index: 2;
 	height: 120px;
 	width: 120px;
 	overflow: hidden;
