--- a/src/css/page.module.css
+++ b/src/css/page.module.css
@@ -19,6 +19,8 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	padding-bottom: 30px;
+	box-sizing: border-box;
 }
 
 .section {
