--- a/src/css/components.module.css
+++ b/src/css/components.module.css
@@ -29,3 +29,30 @@
 .thumbnail {
 	max-height: 100px;
 }
+
+/* CONTACT FORM */
+
+
+
+.input,
+.textarea {
+	border: 1px solid gray;
+}
+
+.contactTable th {
+	width: 25%;
+}
+
+.contactTable .input {
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+}
+
+.contactTable .textarea {
+	width: 100%;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	resize: none;
+}
