--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -35,9 +35,11 @@
 	color: white;
 }
 
+/* NAV TREE */
+/* nav .left.right .section .dropParent .dropChild */
+
 .nav {
-	display: flex;
-	flex-direction: row;
+	display: grid;
 	height: 65px;
 	overflow-y: visible;
 	font-size: 0;
@@ -53,30 +55,84 @@
 					  linear-gradient(45deg, #002147 25%, transparent 25%, transparent 75%, #002147 75%, #002147);*/
 }
 
-.listing {
-	display: flex;
-	flex-direction: column;
-	height: 65px;/*
-	border-left: 1px solid gray;
-	border-right: 1px solid gray;*/
-	background: #ff2200;
+.section {
+	display: grid;
+	grid-auto-rows: 65px;
+	grid-auto-flow: row;
 }
 
 .left {
 	grid-column: 1;
 	margin: 0 0 0 auto;
+	grid-template-columns: auto repeat(3, 1fr);
 	justify-content: flex-end;
 }
 
 .right {
 	grid-column: 3;
 	margin: 0 auto 0 0;
+	grid-template-columns: repeat(3, 1fr) auto;
 	justify-content: flex-start;
 }
 
-.dropDown {
-	width: inherit;
+.section > .spacer {
+	display: flex;
+	height: 65px;
+	padding: 0 40px;
+	width: 100%;
 }
+
+.section:hover {	
+	background: #002147;
+}
+
+.section > .dropParent {
+	display: flex;
+	font-size: 24px;
+	padding: 0 4vw;
+	cursor: pointer;
+	border-right: 5px solid #ff2200;
+	box-sizing: border-box;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	color: white;
+}
+
+.section:hover .dropChild {
+	visibility: visible;
+	animation: expand-down 0.5s forwards;
+}
+
+.dropChild {
+	height: auto;
+	visibility: hidden;
+	z-index: 1;
+	padding: 20px 0;
+	cursor: pointer;
+	border-right: 5px solid gray;
+	font-size: 20px;
+
+	user-select: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+}
+
+.section > .dropParent:hover {
+	border-right: 5px solid #002147;
+}
+
+.section > .dropChild:hover {
+	border-right: 5px solid green;
+}
+
+
+.nav a {color: white}
+.nav a:link {text-decoration: none}
+.nav a:visited {text-decoration: none}
+.nav a:active {text-decoration: none}
+.nav a:hover {text-decoration: none}
 
 .oucc_logo {
 	grid-column: 2;
@@ -93,77 +149,7 @@
 	background-position: 0px -141px;
 }
 
-.listing > div.dropParent {
-	display: flex;
-	align-items: center;
-	height: 65px;
-	font-size: 24px;
-	padding: 0 40px;
-	cursor: pointer;
-	border-right: 5px solid #ff2200;
-}
-
-.listing > div.dropParent:hover {
-	border-right: 5px solid #002147;
-}
-
-.listing > div.dropParent > a {
-	display: flex;
-	align-items: center;
-	height: 65px;
-	margin: 0;
-	vertical-align: top;
-}
-
-.nav a {color: white}
-.nav a:link {text-decoration: none}
-.nav a:visited {text-decoration: none}
-.nav a:active {text-decoration: none}
-.nav a:hover {text-decoration: none}
-.nav div:hover {
-	background: #002147;
-}
-
-.subnav {
-	display: flex;
-	flex-direction: column;
-	grid-row: 2;
-	list-style-type: none;
-	background: gray;
-	width: inherit;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-}
-
-.subnav li {
-	height: 65px;
-	padding: 9px 20px 0;
-	cursor: pointer;
-	border-right: 5px solid gray;
-}
-
-.subnav li a {
-	display: flex;
-	align-items: center;
-	color: white;
-	font-size: 20px;
-	height: inherit;
-}
-
-.subnav li:hover {
-	background: #002147;
-	border-right: 5px solid green;
-}
-
-.subnav li.selected {
-	background: #002147;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	border-right: 5px solid red;
-}
+/* Feed */
 
 .newsFeed {
 	grid-row: 2;
@@ -254,6 +240,15 @@ div.mobileBanner {
 @keyframes expand-up {
 	from {
 		transform: translate(0, 80%) scale(1, 0);
+	}
+	to {
+		transform: translate(0, 0%) scale(1, 1);
+	}
+}
+
+@keyframes expand-down {
+	from {
+		transform: translate(0, -80%) scale(1, 0);
 	}
 	to {
 		transform: translate(0, 0%) scale(1, 1);
