Installed new font

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,8 @@
 /* GENERIC SELECTORS */
 
+//@import url('https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
+
 * {
 	margin: 0;
 	padding: 0;
