--- a/src/css/page.module.css
+++ b/src/css/page.module.css
@@ -10,6 +10,7 @@
 	flex-direction: column;
 	align-items: center;
 	box-sizing: border-box;
+	font-family: 'Josefin Sans';
 }
 
 /* Page area styling */
