--- a/src/css/components.module.css
+++ b/src/css/components.module.css
@@ -46,6 +46,10 @@
 	border: 1px solid gray;
 }
 
+.contactForm {
+	visibility: visible;
+}
+
 .contactTable th {
 	width: 25%;
 }
@@ -62,4 +66,40 @@
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	resize: none;
+}
+
+/* ImageBoxes */
+
+.grid {
+	visibility: visible;
+}
+
+.carousel {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	justify-content: center;
+	padding: 20px 0 0 0;
+	width: 100%;
+	align-self: center;
+	margin: auto;
+}
+	
+.carousel > div {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	align-items: center;
+}
+
+.carousel div img {
+	width: 100%;
+	display: block;
+	max-width: 100vw;
+	margin: 0;
+}
+
+.carousel div:hover {
+	cursor: pointer;
 }
