--- a/src/css/footer.module.css
+++ b/src/css/footer.module.css
@@ -1,4 +1,10 @@
 .footer {
+	display: grid;
+	row-gap: 10px;
+	margin-bottom: 20px;
+}
+
+.icons {
 	display: flex;
 	flex-direction: horizontal;
 	height: 50px;
@@ -15,4 +21,11 @@
 
 .image:hover {
 	opacity: 0.6;
+}
+
+.tag {
+	display: flex;
+	justify-content: center;
+	font-family: 'Josefin Sans';
+	font-weight: 500;
 }
