--- a/src/css/calendar.module.css
+++ b/src/css/calendar.module.css
@@ -1,30 +1,17 @@
-.container {
-	width: 100%;
-}
-
-div.tableContainer {
-	height: 100%;
-	overflow: scroll;
-	white-space: pre-wrap;
-}
-
 table.table {
 	table-layout: fixed;
-	max-width: 100%;
-	min-width: 800px;
 }
 
 div.key {
 	display: flex;
 	flex-direction: row;
-	overflow-x: scroll;
+	overflow-x: auto;
 }
 
 div.key > div {
 	display: flex;
 	flex-direction: row;
 	padding: 0 6px;
-	overflow-x: visible;
 }
 
 span.status {
